<resources>
    <string name="app_name">MatrimonialApp</string>
    <string name="HintFullName">Full Name</string>
    <string name="HintAge">Age</string>
    <string name="HintEmail">Email Address</string>
    <string name="HintPassword">Password</string>
    <string name="LogIn">LOGIN</string>
    <string name="LogOut">LOGOUT</string>
    <string name="Register">Register</string>
    <string name="ForgetPassword">Forget Password!</string>
    <string name="TxtRegisterUser">REGISTER USER</string>






    <string-array name="Religions">

        <item>Islam</item>
        <item>Christianity</item>
        <item> Buddhism</item>
        <item>Hinduism</item>
        <item>Judaism</item>
        <item>Sikhism</item>


    </string-array>


    <string-array name="Creator">

        <item>Self</item>
        <item>Friend</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Relative</item>
    </string-array>

    <string-array name="maritalStatus">
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Divorced</item>
    </string-array>



    <string-array name="physicalCondition">
        <item>Normal</item>
        <item>Physically Challenged</item>
    </string-array>




    <string-array name="workStatus">

        <item>Private Company</item>
        <item>Government / Public Sector</item>
        <item>Defense / Civil Service</item>
        <item>Business / Self Employed</item>
        <item>Not Working</item>
    </string-array>

    <string-array name="livingStatus">

        <item>Family</item>
        <item>Alone</item>
    </string-array>

</resources>