<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/IdEditTxtEmailLogIn"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/HintEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/IdEditTxtPasswordLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/IdEditTxtPasswordLogIn"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/HintPassword"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/IdBtnLogIn"
        app:layout_constraintStart_toStartOf="@+id/IdEditTxtEmailLogIn" />

    <Button
        android:id="@+id/IdBtnLogIn"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="276dp"
        android:onClick="getTheClick"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/IdEditTxtPasswordLogIn" />

    <TextView
        android:id="@+id/IdTxtRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="getTheClick"
        android:text="@string/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IdTxtForgetPassword"
        app:layout_constraintTop_toBottomOf="@+id/IdBtnLogIn" />

    <TextView
        android:id="@+id/IdTxtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgetPassword"
        app:layout_constraintBottom_toBottomOf="@+id/IdTxtRegistration"
        app:layout_constraintEnd_toStartOf="@+id/IdTxtRegistration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/IdBtnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ViewRecycler"
        android:text="Show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdBtnLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>